# xlabhomework-esp32

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
capture/: rename.py
capture2/: rename.py
main/: CMakeLists.txt  init.h  led.cc  led.h  main.cc  oled.cc  oled.h  stepper.cc  stepper.h  uart.cc  uart.h
main/batch/: A_0001.c  A_0002.c  A_0003.c  A_0004.c  A_0005.c  A_0006.c  A_0007.c  A_0008.c  A_0009.c  A_0010.c  A_0011.c  A_0012.c  A_0013.c  A_0014.c  A_0015.c  A_0016.c  A_0017.c  A_0018.c  A_0019.c  A_0020.c  A_0021.c  A_0022.c  A_0023.c  A_0024.c  A_0025.c  A_0026.c  A_0027.c  A_0028.c  A_0029.c  A_0030.c  A_0031.c  A_0032.c  A_0033.c  A_0034.c  A_0035.c  A_0036.c  A_0037.c  A_0038.c  A_0039.c  A_0040.c  (+2128 more)
